--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Content Creator -->
     <section class="about" id="about">
       <div class="container">
-        <div class="aboutus">
+        <div class="aboutus row">
           <div class="aboutus-img col-md-6">
             <img
               src="assets/img/images/c1.png"
@@ -137,7 +137,9 @@
               class="img-fluid"
             />
           </div>
-          <div class="aboutus-content col-md-6">
+          <div
+            class="aboutus-content col-md-6 d-flex flex-column justify-content-center"
+          >
             <h2>Apa itu Content Creator?</h2>
             <p>
               Suatu kegiatan merancang konten sesuai branding untuk menciptakan
