--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
           <div class="logo">
             <a class="logo-brand" href="#">
-              <img src="./assets/img/images/logo-amd-top.png" alt="logo-amd">
+              <img src="./assets/img/images/logo-amd-top.png" alt="logo-amd" />
             </a>
           </div>
           <div class="menu-header">
@@ -104,8 +104,8 @@
                 Pelatihan & Sertifikasi Content Creator
               </h1>
               <p class="text-sm-jumbo">
-                Ayo tingkatkan penjualan produk Anda dengan <br> mengikuti pelatihan
-                content creator di <br>
+                Ayo tingkatkan penjualan produk Anda dengan <br />
+                mengikuti pelatihan content creator di <br />
                 <span style="font-weight: bold">AMD Academy</span> sekarang!
               </p>
               <button class="btn btn-primary btn-jumbo" type="submit">
@@ -113,7 +113,10 @@
               </button>
             </div>
             <div class="col-lg-5 photo-hero">
-              <img src="./assets/img/images/right-hero.png" alt="main-content">
+              <img
+                src="./assets/img/images/right-hero.png"
+                alt="main-content"
+              />
             </div>
           </div>
         </div>
