--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star"></i>
+                <a href=""><span>4.5</span> (2.227 Pengguna)</a>
               </div>
             </div>
             <div class="col-lg-5 photo-hero">
@@ -147,6 +148,78 @@
       </div>
     </section>
 
+    <!-- Brand -->
+    <section id="brand">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h3>
+              Kami Telah Bekerja Sama Dengan Perusahaan Creator Sekala Nasional
+            </h3>
+          </div>
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-4 d-flex justify-content-end">
+                <img src="assets/img/images/image 2.png" alt="" />
+              </div>
+              <div class="col-lg-4 d-flex justify-content-end">
+                <img src="assets/img/images/image 3.png" alt="" />
+              </div>
+              <div class="col-lg-4 d-flex justify-content-end">
+                <img src="assets/img/images/image 4.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Content Creator -->
+    <section id="content-creator">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="assets/img/images/ilustaration.png" alt="" />
+          </div>
+          <div class="col-lg-6 creator">
+            <h3>Apa itu Content Creator ?</h3>
+            <p>
+              Suatu kegiatan merancang konten sesuai branding untuk menciptakan
+              engagement tinggi menggunakan media sosial. Banyak manfaat yang
+              didapat dari content creator :
+            </p>
+
+            <div class="check-creator">
+              <p>
+                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
+                Memiliki pasar tertarget
+              </p>
+              <p>
+                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
+                Membangun Konsistensi Branding
+              </p>
+              <p>
+                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
+                Menjadi Brand Ambassador dan Endorsement
+              </p>
+              <p>
+                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
+                Content Anda Lebih Orisinil
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- amd academy -->
+    <section id="amd-academy">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3"></div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
