materials/fix-bulleting

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star"></i>
-                <a href=""><span>4.5</span> (2.227 Pengguna)</a>
+                <p> <span class="value-rating">4.5</span> (2.227 Pengguna)</p>
               </div>
             </div>
             <div class="col-lg-5 photo-hero">
@@ -151,6 +151,7 @@
     <!-- Brand -->
     <section id="brand">
       <div class="container">
+        <hr>
         <div class="row">
           <div class="col-lg-6">
             <h3>
@@ -182,7 +183,8 @@
             <img src="assets/img/images/ilustaration.png" alt="" />
           </div>
           <div class="col-lg-6 creator">
-            <h3>Apa itu Content Creator ?</h3>
+            <span class="bullete"></span> 
+            <h3> Apa itu Content Creator ?</h3>
             <p>
               Suatu kegiatan merancang konten sesuai branding untuk menciptakan
               engagement tinggi menggunakan media sosial. Banyak manfaat yang
@@ -190,23 +192,24 @@
             </p>
 
             <div class="check-creator">
-              <p>
-                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
-                Memiliki pasar tertarget
-              </p>
-              <p>
-                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
-                Membangun Konsistensi Branding
-              </p>
-              <p>
-                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
-                Menjadi Brand Ambassador dan Endorsement
-              </p>
-              <p>
-                <img class="mr-3" src="assets/img/icons/check1.png" alt="" />
-                Content Anda Lebih Orisinil
-              </p>
+              <div>
+                <img src="assets/img/icons/check1.png" alt="" />
+                <p> Memiliki pasar tertarget </p>
+              </div>
+              <div>
+                <img src="assets/img/icons/check1.png" alt="" />
+                <p> Membangun Konsistensi Branding </p>
+              </div>
+              <div>
+                <img src="assets/img/icons/check1.png" alt="" />
+                <p> Menjadi Brand Ambassador dan Endorsement </p>
+              </div>
+              <div>
+                <img src="assets/img/icons/check1.png" alt="" />
+                <p> Content Anda Lebih Orisinil </p>
+              </div>
             </div>
+            
           </div>
         </div>
       </div>
