materials/add-section-amd-academy

--- a/index.html
+++ b/index.html
@@ -218,8 +218,11 @@
     <!-- amd academy -->
     <section id="amd-academy">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3"></div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            
+            <h1><span class="amd-circle"></span> Mengapa Harus Ikut Pelatihan Content Creator di AMD Academy?</h1>
+          </div>
         </div>
       </div>
     </section>
