--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- font awesome -->
-    <!-- <script src="https://kit.fontawesome.com/40b65501ed.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://kit.fontawesome.com/40b65501ed.js" crossorigin="anonymous">
+      
+    </script> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
