--- a/index.html
+++ b/index.html
@@ -256,5 +256,41 @@
         },
       });
     </script>
+
+    <!-- icon amd -->
+    <section id="icon-amd">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/images/Frame 14536.png" alt="" />
+          </div>
+          <div class="col-lg-4">
+            <img src="assets/img/images/Frame 14538.png" alt="" />
+          </div>
+          <div class="col-lg-4">
+            <img src="assets/img/images/Frame 14537.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- study -->
+    <section id="study">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <h3 class="text-center">Yang Akan Dipelajari</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <p class="text-center">
+              Dalam pelatihan ini Anda akan memahami beberapa materi yang akan
+              disampaikan oleh pakar <br />profesional
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
