--- a/index.html
+++ b/index.html
@@ -290,6 +290,127 @@
             </p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Creative & Technical Brief</h5>
+                <p class="card-text">
+                  Membangun pola pikir strategi untuk sebuah proyek dalam bidang
+                  kreatif.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon2.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Multimedia Creative Research</h5>
+                <p class="card-text">
+                  Mampu menciptakan konten yang menarik dengan egagment yang
+                  tinggi.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon3.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                <p class="card-text">
+                  Membangun pola pikir strategi pemasaran menggunakan media
+                  sosial.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Creative & Technical Brief</h5>
+                <p class="card-text">
+                  Membangun pola pikir strategi untuk sebuah proyek dalam bidang
+                  kreatif.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon2.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Multimedia Creative Research</h5>
+                <p class="card-text">
+                  Mampu menciptakan konten yang menarik dengan egagment yang
+                  tinggi.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem">
+              <img
+                src="assets/img/images/icon3.svg"
+                width="64"
+                height="58"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                <p class="card-text">
+                  Membangun pola pikir strategi pemasaran menggunakan media
+                  sosial.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonial -->
+    <section id="testimonial">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <h3 class="text-center">Apa Kata Mereka</h3>
+            <p class="text-center">
+              Dengar pengalaman mereka yang sudah mengikuti pelatihan content
+              creator di AMD Academy
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
