materials/fix-study-content

--- a/index.html
+++ b/index.html
@@ -230,32 +230,6 @@
         </div>
       </div>
     </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        effect: "coverflow",
-        grabCursor: true,
-        centeredSlides: true,
-        slidesPerView: "auto",
-        coverflowEffect: {
-          rotate: 0,
-          stretch: 0,
-          depth: 50,
-          modifier: 10,
-          slideShadows: false,
-        },
-        navigation: {
-          nextEl: ".btn-next",
-          prevEl: ".btn-prev",
-        },
-      });
-    </script>
 
     <!-- icon amd -->
     <section id="icon-amd">
@@ -279,7 +253,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h3 class="text-center">Yang Akan Dipelajari</h3>
+            <h3 class="text-center"><span class="study-circle"></span>Yang Akan Dipelajari</h3>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -290,108 +264,92 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Creative & Technical Brief</h5>
-                <p class="card-text">
-                  Membangun pola pikir strategi untuk sebuah proyek dalam bidang
-                  kreatif.
-                </p>
+        <div class="card-section">
+          <div class="row card-one">
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Creative & Technical Brief</h5>
+                  <p class="card-text">
+                    Membangun pola pikir strategi untuk sebuah proyek dalam bidang
+                    kreatif.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon2.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Multimedia Creative Research</h5>
+                  <p class="card-text">
+                    Mampu menciptakan konten yang menarik dengan egagment yang
+                    tinggi.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon3.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                  <p class="card-text">
+                    Membangun pola pikir strategi pemasaran menggunakan media
+                    sosial.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon2.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Multimedia Creative Research</h5>
-                <p class="card-text">
-                  Mampu menciptakan konten yang menarik dengan egagment yang
-                  tinggi.
-                </p>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Creative & Technical Brief</h5>
+                  <p class="card-text">
+                    Membangun pola pikir strategi untuk sebuah proyek dalam bidang
+                    kreatif.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon3.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Branding & Digital Marketing Basics</h5>
-                <p class="card-text">
-                  Membangun pola pikir strategi pemasaran menggunakan media
-                  sosial.
-                </p>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon2.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Multimedia Creative Research</h5>
+                  <p class="card-text">
+                    Mampu menciptakan konten yang menarik dengan egagment yang
+                    tinggi.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Creative & Technical Brief</h5>
-                <p class="card-text">
-                  Membangun pola pikir strategi untuk sebuah proyek dalam bidang
-                  kreatif.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon2.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Multimedia Creative Research</h5>
-                <p class="card-text">
-                  Mampu menciptakan konten yang menarik dengan egagment yang
-                  tinggi.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem">
-              <img
-                src="assets/img/images/icon3.svg"
-                width="64"
-                height="58"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Branding & Digital Marketing Basics</h5>
-                <p class="card-text">
-                  Membangun pola pikir strategi pemasaran menggunakan media
-                  sosial.
-                </p>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="assets/img/images/icon3.svg"/>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                  <p class="card-text">
+                    Membangun pola pikir strategi pemasaran menggunakan media
+                    sosial.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -413,5 +371,33 @@
         </div>
       </div>
     </section>
+
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"
+    ></script>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        effect: "coverflow",
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: "auto",
+        coverflowEffect: {
+          rotate: 0,
+          stretch: 0,
+          depth: 50,
+          modifier: 10,
+          slideShadows: false,
+        },
+        navigation: {
+          nextEl: ".btn-next",
+          prevEl: ".btn-prev",
+        },
+      });
+    </script>
   </body>
 </html>
