--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h3 class="text-center"><span class="study-circle"></span>Yang Akan Dipelajari</h3>
+            <h3 class="text-center">
+              <span class="study-circle"></span>Yang Akan Dipelajari
+            </h3>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -269,13 +271,13 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon.svg"/>
+                  <img src="assets/img/images/icon.svg" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Creative & Technical Brief</h5>
                   <p class="card-text">
-                    Membangun pola pikir strategi untuk sebuah proyek dalam bidang
-                    kreatif.
+                    Membangun pola pikir strategi untuk sebuah proyek dalam
+                    bidang kreatif.
                   </p>
                 </div>
               </div>
@@ -283,7 +285,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon2.svg"/>
+                  <img src="assets/img/images/icon2.svg" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Multimedia Creative Research</h5>
@@ -297,10 +299,12 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon3.svg"/>
+                  <img src="assets/img/images/icon3.svg" />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                  <h5 class="card-title">
+                    Branding & Digital Marketing Basics
+                  </h5>
                   <p class="card-text">
                     Membangun pola pikir strategi pemasaran menggunakan media
                     sosial.
@@ -313,13 +317,13 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon.svg"/>
+                  <img src="assets/img/images/icon.svg" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Creative & Technical Brief</h5>
                   <p class="card-text">
-                    Membangun pola pikir strategi untuk sebuah proyek dalam bidang
-                    kreatif.
+                    Membangun pola pikir strategi untuk sebuah proyek dalam
+                    bidang kreatif.
                   </p>
                 </div>
               </div>
@@ -327,7 +331,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon2.svg"/>
+                  <img src="assets/img/images/icon2.svg" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Multimedia Creative Research</h5>
@@ -341,10 +345,12 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon3.svg"/>
+                  <img src="assets/img/images/icon3.svg" />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Branding & Digital Marketing Basics</h5>
+                  <h5 class="card-title">
+                    Branding & Digital Marketing Basics
+                  </h5>
                   <p class="card-text">
                     Membangun pola pikir strategi pemasaran menggunakan media
                     sosial.
@@ -361,22 +367,101 @@
     <section id="testimonial">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h3 class="text-center">Apa Kata Mereka</h3>
+          <div class="col-sm-6">
+            <span class="study-circle"></span><h3 class="text-center">Apa Kata Mereka</h3>
             <p class="text-center">
               Dengar pengalaman mereka yang sudah mengikuti pelatihan content
               creator di AMD Academy
             </p>
           </div>
         </div>
+        <div
+          class="mt-5 relative d-flex flex-column align-items-center"
+          style="background-image: url(./assets/img/images/bg1.png)"
+        >
+          <div class="d-flex align-items-center" style="gap: 48px;">
+            <div>
+              <svg width="95" height="96" viewBox="0 0 95 96" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M59.2163 24.4775L35.6938 48L59.2163 71.5225" stroke="#0F345E" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+            </div>
+            <div class="d-flex flex-column align-items-center">
+              <div
+            class="p-3 rounded mx-auto text-white text-center"
+            style="
+              width: fit-content;
+              background-color: #0f345e;
+              max-width: 450px;
+            "
+          >
+            <p class="h6">It was a very good experience</p>
+            <p class="small">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus
+              nibh mauris, nec turpis orci lectus maecenas. Suspendisse sed
+              magna eget nibh in turpis. Consequat duis diam lacus arcu.
+              Faucibus venenatis felis id augue sit cursus pellentesque enim
+              arcu. Elementum felis magna pretium in tincidunt. Suspendisse sed
+              magna eget nibh in turpis. Consequat duis diam lacus arcu. urpis
+              orci lectus maecenas. Suspendisse sed magna eget nibh in turpis.
+              Consequat duis diam lacus arcu. Faucibus venenatis felis id augue
+              sit cursus pellentesque enim arcu
+            </small>
+          </div>
+          <div
+            class="block rounded-1"
+            style="
+              width: 36px;
+              height: 36px;
+              margin-top: -20px;
+              background-color: #0f345e;
+              transform: rotate(45deg);
+            "
+          ></div>
+            </div>
+            <div>
+              <svg width="95" height="96" viewBox="0 0 95 96" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M35.7837 71.5225L59.3062 48L35.7837 24.4775" stroke="#0F345E" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+            </div>
+          </div>
+
+          <div class="d-flex mt-2" style="gap: 2rem">
+            <img
+              src="assets/img/images/testi1.png"
+              alt=""
+              style="width: 60px; height: 60px"
+            />
+            <img
+              src="assets/img/images/testi2.png"
+              alt=""
+              style="width: 60px; height: 60px"
+            />
+            <img
+              src="assets/img/images/testi5.png"
+              alt=""
+              style="width: 80px; height: 80px"
+            />
+            <img
+              src="assets/img/images/testi4.png"
+              alt=""
+              style="width: 60px; height: 60px"
+            />
+            <img
+              src="assets/img/images/testi3.png"
+              alt=""
+              style="width: 60px; height: 60px"
+            />
+          </div>
+        </div>
       </div>
     </section>
 
-
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
     ></script>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
