--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <section id="testimonial">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-sm-6">
+          <div class="col-sm-4">
             <span class="study-circle"></span><h3 class="text-center">Apa Kata Mereka</h3>
             <p class="text-center">
               Dengar pengalaman mereka yang sudah mengikuti pelatihan content
@@ -454,6 +454,45 @@
               style="width: 60px; height: 60px"
             />
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- bg -->
+    <section id="bg">
+      <div style="height:265px">
+            <img class="h-100 w-100" src="assets/img/images/btm-testimonial.png" alt="" />
+          </div>
+    </section>
+
+    <!-- register now -->
+    <section id="register">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+             <span class="study-circle"></span><h3 class="text-center">Daftar Sekarang</h3>
+          </div>
+        </div>
+        <div class="d-flex justify-content-between" style="gap: 16px;">
+          <div >
+            <p>Pendaftaran hingga</p>
+            <h6>25 Februari 2022</h6>
+          </div>
+          <svg width="3" height="123" viewBox="0 0 3 123" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <line x1="1.5" y1="1.5" x2="1.50001" y2="121.5" stroke="white" stroke-opacity="0.2" stroke-width="3" stroke-linecap="round"/>
+          </svg>
+      <div >
+            <p>Kuota</p>
+            <h6>50 Orang</h6>
+          </div>
+          <svg width="3" height="123" viewBox="0 0 3 123" fill="none" xmlns="http://www.w3.org/2000/svg">
+<line x1="1.5" y1="1.5" x2="1.50001" y2="121.5" stroke="white" stroke-opacity="0.2" stroke-width="3" stroke-linecap="round"/>
+</svg>
+ <div >
+            <p>Waktu Pelaksanaan</p>
+            <h6>7 - 10 Maret 2022</h6>
+          </div>
+ 
         </div>
       </div>
     </section>
