update konsultasi dan footer

--- a/index.html
+++ b/index.html
@@ -600,25 +600,80 @@
       </div>
     </section>
 
-    <!-- contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <img src="assets/img/images/h4.png" alt="">
-          </div>
-          <div class="col-lg-6">
-            <h3>Let’s improve your digital skils
-            and team with AMD Academy.</h3>
-
-             <button class="btn btn-primary btn-jumbo" type="submit">
-                      Daftar Sekarang
-                    </button>
-          </div>
+    <!-- Konsultasi -->
+    <section id="konsultasi">
+        <div class="container sec-konsultasi">
+            <div class="content-konsultasi">
+                <div class="img-konsultasi">
+                    <img src="assets/img/images/woman-with-headset-pointing-you 1.png" alt="konsultasi"
+                        class="img-konsul">
+                </div>
+                <div class="cont-konsultasi">
+                  <h3>Konsultasikan dengan Kami</h3>
+                    <p class="desc-konsultasi">Tertarik untuk mengikuti pelatihan ini, namun memiliki segudang
+                        pertanyaan? Jangan khawatir, segera konsultasikan permasalahan kamu kepada kami. Kami segenap
+                        Arkatama Squad siap memberikan pelayanan terbaik.</p>
+                    <button class="btn btn-primary" type="submit">Hubungi Kami</button>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
 
+
+    <!-- footer -->
+     <section id="footer" class="sec-footer">
+        <div class="container">
+            <h3 class="title-footer">Let’s improve your digital skils <br>and team with AMD Academy.</h3>
+            <div class="border-footer"></div>
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="assets/img/icons/logo-footer.png" alt="logo-footer">
+                    <p class="desc-footer">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an
+                        unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                </div>
+                <div class="col-md-5 ms-auto">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="sec-link-footer">
+                                <a href="#" class="link-footer">About</a>
+                                <a href="#" class="link-footer">Contact</a>
+                                <a href="#" class="link-footer">Career</a>
+                                <a href="#" class="link-footer">Help & Support</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="sec-link-footer">
+                                <a href="#" class="link-footer">Office</a>
+                                <a href="#" class="link-footer">Handkbook</a>
+                                <a href="#" class="link-footer">Testimonials</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="sec-link-footer">
+                                <p class="title-link-footer">official Account</p>
+                                <div class="sec-sosmed">
+                                    <a href="#" class="link-footer">
+                                        <i class="fa-brands fa-instagram fa-xl"></i>
+                                    </a>
+                                    <a href="#" class="link-footer">
+                                        <i class="fa-brands fa-facebook fa-xl"></i>
+                                    </a>
+                                    <a href="#" class="link-footer">
+                                        <i class="fa-brands fa-twitter fa-xl"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center text-bottom">© 2022 Layanan pengembangan skill di bidang Teknologi Informasi - build
+                by
+                PT Arkatama Multi Solusindo
+            </p>
+        </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
